fixed issue with overflowing body + made year in footer dynamic with js

--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,12 +1,7 @@
 html {
     scroll-behavior: smooth;
   }
-  
-  body {
-    overflow-x: hidden;
-  }
 
   .main-container {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
   }
