--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -10,7 +10,7 @@ header {
   .header-content {
     position: relative;
     height: 100%;
-    width: 42%;
+    width: 40%;
     overflow: hidden;
   }
   .carousel-slide {
