--- a/scss/_playlist.scss
+++ b/scss/_playlist.scss
@@ -1,5 +1,5 @@
 .playlist-section {
-    background: url(../images/overlay.png);
+    // background: url(../images/overlay.png);
     background-color: black;
 }
 .playlist-container{
