--- a/scss/_releases.scss
+++ b/scss/_releases.scss
@@ -19,7 +19,6 @@
   display: flex;
   justify-content: space-around;
   gap: 2rem;
-  width: 100vw;
   padding: 4rem 6rem;
   .news-card {
     display: flex;
