--- a/scss/_sliding-text.scss
+++ b/scss/_sliding-text.scss
@@ -3,12 +3,15 @@
     align-items: center;
     overflow: hidden;
     background-color: rgb(226, 217, 217);
-    width: 100vw;
+    width: 100%;
     height: 60px;
     font-family: $primary-font;
     font-weight: 700;
     font-size: 20px;
     span {
-      animation: horizontal-scroll 2s linear infinite alternate-reverse;
+      animation: horizontal-scroll 2s linear infinite normal;
+    }
+    a {
+      color: black;
     }
   }
