--- a/styles/style.css
+++ b/styles/style.css
@@ -10,13 +10,8 @@ html {
   scroll-behavior: smooth;
 }
 
-body {
-  overflow-x: hidden;
-}
-
 .main-container {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
 }
 
 .sliding-text-container {
@@ -28,7 +23,7 @@ body {
           align-items: center;
   overflow: hidden;
   background-color: #e2d9d9;
-  width: 100vw;
+  width: 100%;
   height: 60px;
   font-family: "Syne", sans-serif;
   font-weight: 700;
@@ -36,7 +31,12 @@ body {
 }
 
 .sliding-text-container span {
-  animation: horizontal-scroll 2s linear infinite alternate-reverse;
+  -webkit-animation: horizontal-scroll 2s linear infinite normal;
+          animation: horizontal-scroll 2s linear infinite normal;
+}
+
+.sliding-text-container a {
+  color: black;
 }
 
 header {
@@ -53,7 +53,7 @@ header {
 header .header-content {
   position: relative;
   height: 100%;
-  width: 42%;
+  width: 40%;
   overflow: hidden;
 }
 
@@ -146,7 +146,6 @@ header button {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   gap: 2rem;
-  width: 100vw;
   padding: 4rem 6rem;
 }
 
@@ -237,7 +236,6 @@ header button {
 }
 
 .playlist-section {
-  background: url(../images/overlay.png);
   background-color: black;
 }
 
